# dRuntime-fat

./: .gitignore  Cargo.toml  README.md  lib.rs
contract/res/: saas3.abi.json  saas3.code
resources/test/: CoinMarketCap.json  Coingecko.json
src/: lib.rs
