[package]
name = "druntime"
version = "0.1.0"
authors = ["songtianyi <tianyi@saas3.io>"]
edition = "2018"
resolver = "2"

[dependencies]
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"], optional = true }

pink-extension = { version = "0.1.0", default-features = false }
pink-web3 = { version = "0.19.1", default-features = false, features = ["pink"] }

hex =  { version = "0.4", default-features = false }
hex-literal = "0.3.4"

# for openapi 
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
openapiv3 = { version = "1.0.1", default-features = false}

[dev-dependencies]
pink-extension-runtime = "0.1"
env_logger = "0.9.0"

[dependencies.futures]
version = "0.3.5"
features = ["alloc"]
default-features = false

[build-dependencies]
run_shell = "0.1"
sp-core = "6"

[lib]
name = "druntime"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-web3/std",
    "hex/std",
    "ink_env/std",
    "ink_lang/std",
]
ink-as-dependency = []
