[package]
name = "druntime"
version = "0.1.0"
authors = ["tianyi <tianyi@saas3.io>"]
edition = "2021"

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
primitive-types = { version = "0.11", default-features = false, features = ["codec", "scale-info"] }

pink-extension = { version = "0.1", default-features = false }
pink-web3 = { version = "0.19", default-features = false, features = ["pink", "signing"] }
ethabi = { version = "17.2.0", package = "pink-ethabi", default-features = false, features = [
    "serde",
    "rlp",
] }

phat_offchain_rollup = { path = "../../phat-stateful-rollup/phat/rollup", default-features = false }

#abi = { git = "https://github.com/SaaS3-Foundation/abi.git" }
abi = { path = "../abi" }

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
dotenvy = "0.15"
hex = "0.4"
pink-extension-runtime = { version = "0.1", default-features = false }

[lib]
name = "druntime"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "lib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "phat_offchain_rollup/std",
    "pink-extension/std",
    "pink-web3/std",
    "phat_offchain_rollup/std",
]
ink-as-dependency = []
